--- a/student-form-project/.gitignore
+++ b/student-form-project/.gitignore
@@ -1,32 +1,7 @@
-# Compiled class files
-/target/
-
-# Package files
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# Maven directory
-/.mvn/
-maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
-# IDE - IntelliJ IDEA
-/.idea/
-*.iws
+.idea/
+.mvn/
+target/
 *.iml
-*.ipr
-
-# Log file
-*.log
-
-# Other unnecessary files
-*.class
-/node_modules/
-.DS_Store
-/out/
+HELP.md
+mvnw
+mvnw.cmd
